	* Fixed a bug in rdlogeditb(1) that caused corruption of log
	names containing multibyte UTF-8 characters.
2019-03-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed incorrect program names returned by the '--help' and
	'--versions' switches in rdlibraryb(1) and rdlogeditb(1).
	* Added support for the '--help' and '--version' switches to
	rdadminb(1).
2019-03-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlibraryb(1) and rdlogeditb(1) that caused
	the title bar of the main window to display the default host and
	user name rather than the values actually used for the login.
2019-09-20 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2019-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.3.2.
2019-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Changed the behavior when clicking the 'x' button on the
	'Unsaved Changes' dialog in rdlogeditb(1) to cancel the
	current operation.
2019-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Add Log' dialog in rdlogeditb(1) to disable the
	'OK' button when the 'Log Name' field is empty.
2019-11-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused the package version and current
	host login information to fail to appear in the titlebar
	when authenticating by ticket.
2019-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'TicketUser=' parameter to login tickets for Linux.
2019-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'TicketUser=' parameter to login tickets for Windows.
2019-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version 1.3.3.
2019-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlibraryb(1) that caused incorrect username
	information to be displayed on the titlebar.
2019-11-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version 1.3.4.
2021-08-21 Fred Gleason <fredg@paravelsystems.com>
	* Ported to Qt5.