@@ -454,3 +454,6 @@
 	* Incremented the package version 1.3.4.
 2021-08-21 Fred Gleason <fredg@paravelsystems.com>
 	* Ported to Qt5.
+2023-06-27 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed regressions that treated null QTime values as being equal
+	to "00:00:00".
